--- a/index.html
+++ b/index.html
@@ -10,80 +10,122 @@
 </head>
 
 <body>
-    <header></header>
-    <main>
-        <ul class="listing">
-            <li>
-                <h2>card een</h2>
-                <div class="body">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, rem facere obcaecati
-                        consectetur,
-                        autem tempore maiores eaque expedita cupiditate ut dolor eos. Expedita, quos? Obcaecati qui
-                        perferendis sapiente porro quia!
-                    </p>
-                </div>
-                <div class="cta">
-                    <a href="">klik hier!</a>
-                </div>
-            </li>
-            <li>
-                <h2>card twee</h2>
-                <div class="body">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem maiores obcaecati
-                        perspiciatis perferendis et iste aperiam dolores esse excepturi, itaque inventore ut. Deleniti,
-                        corrupti. Repudiandae fugit quidem distinctio vitae unde.
-                    </p>
-                </div>
-                <div class="cta">
-                    <a href="">klik hier!</a>
-                </div>
-            </li>
-            <li>
-                <h2>card een</h2>
-                <div class="body">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, rem facere obcaecati
-                        consectetur,
-                        autem tempore maiores eaque expedita cupiditate ut dolor eos. Expedita, quos? Obcaecati qui
-                        perferendis sapiente porro quia!
-                    </p>
-                </div>
-                <div class="cta">
-                    <a href="">klik hier!</a>
-                </div>
-            </li>
-            <li>
-                <h2>card een</h2>
-                <div class="body">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, rem facere obcaecati
-                        consectetur,
-                        autem tempore maiores eaque expedita cupiditate ut dolor eos. Expedita, quos? Obcaecati qui
-                        perferendis sapiente porro quia!
-                    </p>
-                </div>
-                <div class="cta">
-                    <a href="">klik hier!</a>
-                </div>
-            </li>
-            <li>
-                <h2>card een</h2>
-                <div class="body">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, rem facere obcaecati
-                        consectetur,
-                        autem tempore maiores eaque expedita cupiditate ut dolor eos. Expedita, quos? Obcaecati qui
-                        perferendis sapiente porro quia!
-                    </p>
-                </div>
-                <div class="cta">
-                    <a href="">klik hier!</a>
-                </div>
-            </li>
-        </ul>
-        <div class="header">header</div>
+    <div class="container">
+        <div class="header">Header</div>
         <div class="ls">left sidebar</div>
+        <main>
+            <ul class="listing">
+                <li>
+                    <h2>card een</h2>
+                    <div class="body">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, rem facere obcaecati
+                            consectetur,
+                            autem tempore maiores eaque expedita cupiditate ut dolor eos. Expedita, quos? Obcaecati qui
+                            perferendis sapiente porro quia!
+                        </p>
+                    </div>
+                    <div class="cta">
+                        <a href="">klik hier!</a>
+                    </div>
+                </li>
+                <li>
+                    <h2>card twee</h2>
+                    <div class="body">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem maiores obcaecati
+                            perspiciatis perferendis et iste aperiam dolores esse excepturi, itaque inventore ut.
+                            Deleniti,
+                            corrupti. Repudiandae fugit quidem distinctio vitae unde.
+                        </p>
+                    </div>
+                    <div class="cta">
+                        <a href="">klik hier!</a>
+                    </div>
+                </li>
+                <li>
+                    <h2>card drie</h2>
+                    <div class="body">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, rem facere obcaecati
+                            consectetur,
+                            autem tempore maiores eaque expedita cupiditate ut dolor eos. Expedita, quos? Obcaecati qui
+                            perferendis sapiente porro quia!
+                        </p>
+                    </div>
+                    <div class="cta">
+                        <a href="">klik hier!</a>
+                    </div>
+                </li>
+                <li>
+                    <h2>card vier</h2>
+                    <div class="body">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, rem facere obcaecati
+                            consectetur,
+                            autem tempore maiores eaque expedita cupiditate ut dolor eos. Expedita, quos? Obcaecati qui
+                            perferendis sapiente porro quia!
+                        </p>
+                    </div>
+                    <div class="cta">
+                        <a href="">klik hier!</a>
+                    </div>
+                </li>
+                <li>
+                    <h2>card vijf</h2>
+                    <div class="body">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, rem facere obcaecati
+                            consectetur,
+                            autem tempore maiores eaque expedita cupiditate ut dolor eos. Expedita, quos? Obcaecati qui
+                            perferendis sapiente porro quia!
+                        </p>
+                    </div>
+                    <div class="cta">
+                        <a href="">klik hier!</a>
+                    </div>
+                </li>
+                <li>
+                    <h2>card vijf</h2>
+                    <div class="body">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, rem facere obcaecati
+                            consectetur,
+                            autem tempore maiores eaque expedita cupiditate ut dolor eos. Expedita, quos? Obcaecati qui
+                            perferendis sapiente porro quia!
+                        </p>
+                    </div>
+                    <div class="cta">
+                        <a href="">klik hier!</a>
+                    </div>
+                </li>
+                <li>
+                    <h2>card vijf</h2>
+                    <div class="body">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, rem facere obcaecati
+                            consectetur,
+                            autem tempore maiores eaque expedita cupiditate ut dolor eos. Expedita, quos? Obcaecati qui
+                            perferendis sapiente porro quia!
+                        </p>
+                    </div>
+                    <div class="cta">
+                        <a href="">klik hier!</a>
+                    </div>
+                </li>
+                <li>
+                    <h2>card vijf</h2>
+                    <div class="body">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, rem facere obcaecati
+                            consectetur,
+                            autem tempore maiores eaque expedita cupiditate ut dolor eos. Expedita, quos? Obcaecati qui
+                            perferendis sapiente porro quia!
+                        </p>
+                    </div>
+                    <div class="cta">
+                        <a href="">klik hier!</a>
+                    </div>
+                </li>
+            </ul>
+
+
+        </main>
         <div class="rs">right sidebar</div>
         <div class="footer">footer</div>
-    </main>
-
+    </div>
 </body>
 
 </html>
